src/objects/Json_Key_Object_Field_mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used to keep mapping of json key and salesforce field mapping.</description>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Field_Api__c</fullName>
        <label>SF Field Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Rego To SF Mapping</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Object_Name__c</columns>
        <columns>SF_Field_Api__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>